# icao-local-pkd-cpp

./: .claude-memory.md  .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  LUCKFOX_README.md  README.md  TEST_COMPILATION_SUCCESS.md  docker-backup.sh  docker-clean-and-init.sh  docker-clean.sh  docker-compose-luckfox.yaml  docker-health.sh  docker-ldap-init.sh  docker-logs.sh  docker-restart.sh  docker-restore.sh  docker-start.sh  docker-stop.sh  luckfox-restart.sh  luckfox-restore.sh  luckfox-start.sh  luckfox-stop.sh  package-lock.json  package.json  podman-clean-and-init.sh  podman-health.sh  podman-start.sh  podman-stop.sh  vcpkg.json
services/common-lib/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
services/common-lib/src/utils/: string_utils.cpp  time_utils.cpp
services/common-lib/src/x509/: certificate_parser.cpp  dn_components.cpp  dn_parser.cpp  metadata_extractor.cpp
services/common-lib/tests/: CMakeLists.txt  test_certificate_parser.cpp  test_dn_components.cpp  test_dn_parser.cpp  test_main.cpp  test_metadata_extractor.cpp
services/common-lib/tests/utils/: test_string_utils.cpp  test_time_utils.cpp
services/eac-service/: CMakeLists.txt  Dockerfile
services/eac-service/src/: main.cpp
services/eac-service/src/domain/: cvc_models.h
services/eac-service/src/handlers/: eac_certificate_handler.cpp  eac_certificate_handler.h  eac_statistics_handler.cpp  eac_statistics_handler.h  eac_upload_handler.cpp  eac_upload_handler.h
services/eac-service/src/infrastructure/: app_config.h  service_container.cpp  service_container.h
services/eac-service/src/repositories/: cvc_certificate_repository.cpp  cvc_certificate_repository.h
services/eac-service/src/services/: cvc_service.cpp  cvc_service.h  eac_chain_validator.cpp  eac_chain_validator.h
services/monitoring-service/: CMakeLists.txt  DESIGN.md  Dockerfile  vcpkg.json
services/monitoring-service/src/: main.cpp
services/monitoring-service/src/collectors/: metrics_collector.cpp  metrics_collector.h
services/monitoring-service/src/handlers/: monitoring_handler.cpp  monitoring_handler.h
services/pa-service/: CLAUDE.md  CMakeLists.txt  Dockerfile  vcpkg.json
services/pa-service/src/: main.cpp
services/pa-service/src/adapters/: ldap_crl_provider.cpp  ldap_crl_provider.h  ldap_csca_provider.cpp  ldap_csca_provider.h
services/pa-service/src/auth/: personal_info_crypto.h
services/pa-service/src/common/: audit_log.h  country_code_utils.h  db_connection_pool.h  error_codes.h  exceptions.h  ldap_connection_pool.cpp  ldap_connection_pool.h  logger.h
services/pa-service/src/handlers/: health_handler.cpp  health_handler.h  info_handler.cpp  info_handler.h  pa_handler.cpp  pa_handler.h
services/pa-service/src/infrastructure/: app_config.h  service_container.cpp  service_container.h
services/pa-service/src/repositories/: data_group_repository.cpp  data_group_repository.h  ldap_certificate_repository.cpp  ldap_certificate_repository.h  ldap_crl_repository.cpp  ldap_crl_repository.h  pa_verification_repository.cpp  pa_verification_repository.h  trust_material_request_repository.cpp  trust_material_request_repository.h
services/pa-service/src/services/: certificate_validation_service.cpp  certificate_validation_service.h  data_group_parser_service.cpp  data_group_parser_service.h  dsc_auto_registration_service.cpp  dsc_auto_registration_service.h  pa_verification_service.cpp  pa_verification_service.h  sod_parser_service.cpp  sod_parser_service.h  trust_material_service.cpp  trust_material_service.h
services/pa-service/tests/repositories/: data_group_repository_test.cpp  ldap_helpers_test.cpp  pa_verification_repository_test.cpp
services/pkd-management/: BUILD_ID  CLAUDE.md  CMakeLists.txt  Dockerfile  vcpkg.json
services/pkd-management/src/: common.h  ldif_processor.cpp  ldif_processor.h  main.cpp  processing_strategy.cpp  processing_strategy.h
services/pkd-management/src/adapters/: db_crl_provider.h  db_csca_provider.cpp  (+5 more)
services/pkd-management/tests/: crl_validator_test.cpp  ldap_dn_test.cpp  test_api_rate_limiter.cpp  test_asn1_parser.cpp  test_certificate_utils.cpp  test_doc9303_checklist.cpp  test_lc_validator.cpp  test_ldif_structure_service.cpp  test_progress_manager.cpp  test_x509_metadata_extractor.cpp
services/pkd-management/tools/: update_x509_metadata.cpp
services/pkd-relay-service/: CLAUDE.md  CMakeLists.txt  Dockerfile
services/pkd-relay-service/src/: main.cpp
services/pkd-relay-service/tests/: test_icao_ldap_cert_utils.cpp  test_ldap_storage_service.cpp  test_upload_config.cpp  test_upload_services.cpp
shared/: CMakeLists.txt
shared/domain/: Entity.hpp
shared/exception/: DomainException.hpp  InfrastructureException.hpp
shared/icao/audit/: audit_log.h
shared/lib/audit/: CMakeLists.txt  README.md  icao-audit-config.cmake.in
shared/lib/certificate-parser/: CMakeLists.txt  README.md  icao-certificate-parser-config.cmake.in
shared/lib/config/: CMakeLists.txt  config_manager.cpp  config_manager.h
shared/lib/cvc-parser/: CMakeLists.txt
shared/lib/database/: CHANGELOG.md  CMakeLists.txt  README.md  db_connection_interface.h  db_connection_pool.cpp  db_connection_pool.h  db_connection_pool_factory.cpp  db_connection_pool_factory.h  handler_utils.h  i_query_executor.h  icao-database-config.cmake.in  oracle_connection_pool.cpp  oracle_connection_pool.h  oracle_query_executor.cpp  oracle_query_executor.h  postgresql_query_executor.cpp  postgresql_query_executor.h  query_executor_factory.cpp  query_helpers.cpp  query_helpers.h
shared/lib/exception/: CMakeLists.txt  exceptions.h
shared/lib/icao-validation/: CMakeLists.txt
shared/lib/icao9303/: CHANGELOG.md  CMakeLists.txt  README.md  dg_parser.cpp  dg_parser.h  icao-icao9303-config.cmake.in  sod_parser.cpp  sod_parser.h
shared/lib/ldap/: CHANGELOG.md  CMakeLists.txt  README.md  icao-ldap-config.cmake.in  ldap_connection_pool.cpp  ldap_connection_pool.h
shared/lib/logging/: CMakeLists.txt  logger.h
shared/static/swagger-ui/: index.html
shared/util/: Base64Util.hpp  UuidUtil.hpp
(+1302 files in other folders)
